--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="img/str.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Beneš Adam, Jalovec Tadeáš">
+    <meta name="description" content="Sigma web">
     <title>Calorics</title>
   </head>
   <body>
